--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,21 @@
    <groupId>com.homeadvisor.kafka</groupId>
    <artifactId>kafdrop</artifactId>
    <version>2.0.0</version>
+   <packaging>war</packaging>
 
-   <description>For when you have a Kaf(ka) cluster to monitor</description>
+   <description>For when you have a Kafka cluster to monitor</description>
 
    <properties>
       <spring.boot.version>1.3.6.RELEASE</spring.boot.version>
       <additionalparam>-Xdoclint:none</additionalparam>
       <curator.version>2.10.0</curator.version>
+      <tomcat.version>7.0.34</tomcat.version>
    </properties>
 
    <scm>
-       <connection>scm:git:git@github.com:HomeAdvisor/Kafdrop.git</connection>
-       <developerConnection>scm:git:git@github.com:HomeAdvisor/Kafdrop.git</developerConnection>
-       <tag>HEAD</tag>
+      <connection>scm:git:git@github.com:bullhorn/Kafdrop.git</connection>
+      <developerConnection>scm:git:git@github.com:bullhorn/Kafdrop.git</developerConnection>
+      <tag>HEAD</tag>
    </scm>
 
    <dependencyManagement>
@@ -129,12 +131,17 @@
          <scope>test</scope>
       </dependency>
 
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-tomcat</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
    </dependencies>
 
-
-
    <build>
-      <plugins>
+       <finalName>kafdrop</finalName>
+       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -153,22 +160,32 @@
             </configuration>
             <version>2.2.1</version>
          </plugin>
-         <plugin>
-            <!-- Build an executable JAR -->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.4</version>
-            <configuration>
-               <archive>
-                  <manifest>
-                     <addClasspath>true</addClasspath>
-                     <classpathPrefix>lib/</classpathPrefix>
-                     <mainClass>com.homeadvisor.kafdrop.KafDrop</mainClass>
-                  </manifest>
-               </archive>
-            </configuration>
-         </plugin>
-         <plugin>
+          <!--<plugin>-->
+              <!--&lt;!&ndash; Build an executable JAR &ndash;&gt;-->
+              <!--<groupId>org.apache.maven.plugins</groupId>-->
+              <!--<artifactId>maven-jar-plugin</artifactId>-->
+              <!--<version>2.4</version>-->
+              <!--<configuration>-->
+                  <!--<archive>-->
+                      <!--<manifest>-->
+                          <!--<addClasspath>true</addClasspath>-->
+                          <!--<classpathPrefix>lib/</classpathPrefix>-->
+                          <!--<mainClass>com.homeadvisor.kafdrop.KafDrop</mainClass>-->
+                      <!--</manifest>-->
+                  <!--</archive>-->
+              <!--</configuration>-->
+          <!--</plugin>-->
+
+
+          <plugin>
+              <artifactId>maven-war-plugin</artifactId>
+              <version>3.1.0</version>
+              <configuration>
+                  <failOnMissingWebXml>false</failOnMissingWebXml>
+              </configuration>
+          </plugin>
+
+          <plugin>
             <groupId>com.spotify</groupId>
             <artifactId>docker-maven-plugin</artifactId>
             <version>0.4.13</version>
